# django-db-connection-pool

./: LICENSE  MANIFEST.in  README.md  README_CN.md  README_cn.md  README_en.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
dj_db_conn_pool/: __init__.py
dj_db_conn_pool/backends/: __init__.py
dj_db_conn_pool/backends/jdbc/: __init__.py  base.py  mixins.py  utils.py
dj_db_conn_pool/backends/jdbc/oceanbase/: base.py  mixins.py
dj_db_conn_pool/backends/jdbc/oceanbase/mysql/: base.py
dj_db_conn_pool/backends/jdbc/oceanbase/oracle/: base.py
dj_db_conn_pool/backends/jdbc/oracle/: base.py
dj_db_conn_pool/backends/mysql/: base.py
dj_db_conn_pool/backends/odbc/: mixins.py  utils.py
dj_db_conn_pool/backends/odbc/oceanbase/oracle/: base.py
dj_db_conn_pool/backends/oracle/: base.py
dj_db_conn_pool/backends/postgis/: base.py  mixins.py
dj_db_conn_pool/backends/postgresql/: base.py  mixins.py
dj_db_conn_pool/backends/postgresql/django_tenants/: base.py
dj_db_conn_pool/compat/: __init__.py  jdbc.py
dj_db_conn_pool/core/: __init__.py  base.py  exceptions.py  mixins.py  utils.py
dj_db_conn_pool/core/mixins/: __init__.py  core.py  creation.py
test/: README.md  pyproject.toml
