[project]
name = "django-db-connection-pool"
description = "Database connection pool component library for Django"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Altair Bow", email = "altair.bow@foxmail.com" }]
keywords = ["django", "db", "database", "persistent", "connection", "pool", "pooling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
    "Django>=2.0",
    "SQLAlchemy>=1.4.24",
    "sqlparams>=4.0.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/altairbow/django-db-connection-pool"
repository = "https://github.com/altairbow/django-db-connection-pool"

[project.optional-dependencies]
all = [
    "Django>=2.0",
    "JPype1>=1.3.0",
    "SQLAlchemy>=1.4.24",
    "cx-Oracle>=6.4.1",
    "mysqlclient>=1.3.0",
    "psycopg2>=2.8.6",
    "pyodbc>=4.0.34",
    "sqlparams>=3.0.0",
]

jdbc = ["JPype1>=1.3.0"]
mysql = ["mysqlclient>=1.3.0"]
odbc = ["pyodbc>=4.0.34"]
oracle = ["cx-Oracle>=6.4.1"]
postgresql = ["psycopg2>=2.8.6"]
psycopg2 = ["psycopg2>=2.8.6"]
psycopg3 = ["psycopg>=3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "dj_db_conn_pool.__version__" }
