[project]
name = "django-db-connection-pool"
description = "Database connection pool component library for Django"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Altair Bow", email = "altair.bow@foxmail.com" }]
keywords = ["django", "db", "database", "persistent", "connection", "pool", "pooling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.0"
dependencies = [
    "Django",
    "SQLAlchemy",
    "sqlparams",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/altairbow/django-db-connection-pool"
repository = "https://github.com/altairbow/django-db-connection-pool"

[project.optional-dependencies]
all = [
    "Django",
    "SQLAlchemy",
    "sqlparams",
    "psycopg-binary",
    "mysqlclient",
    "oracledb",
    "pyodbc",
    "JPype1",
]

postgresql = ["psycopg-binary"]
psycopg2 = ["psycopg2-binary"]
psycopg3 = ["psycopg-binary"]
mysql = ["mysqlclient"]
oracle = ["oracledb"]
odbc = ["pyodbc"]
jdbc = ["JPype1"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "dj_db_conn_pool.__version__" }
